--- a/scrapper/pom.xml
+++ b/scrapper/pom.xml
@@ -182,6 +182,7 @@
                             <apiPackage>api</apiPackage>
                             <modelPackage>model</modelPackage>
                             <configOptions>
+                                <reactive>true</reactive>
                                 <interfaceOnly>true</interfaceOnly>
                                 <useSpringBoot3>true</useSpringBoot3>
                             </configOptions>
