--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -5,8 +5,8 @@ app:
     force-check-delay: 10s
 
   client-base-url:
-    github-url: https://api.github.com/repos/
-    stackoverflow-url: https://api.stackexchange.com/2.3/questions/
+    github-url: https://api.github.com
+    stackoverflow-url: https://api.stackexchange.com/2.3
 
 spring:
   application:
