--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -13,6 +13,10 @@ app:
 spring:
   application:
     name: scrapper
+  datasource:
+    url: ${db_url}
+    username: ${db_username}
+    password: ${db_password}
 
 server:
   port: 8080
