--- a/scrapper/src/test/resources/application.yml
+++ b/scrapper/src/test/resources/application.yml
@@ -7,6 +7,7 @@ app:
   client-base-url:
     github-uri: http://localhost:8080
     stackoverflow-uri: http://localhost:8080/2.3
+  data-access-technology: JDBC # JDBC, JOOQ
 
 spring:
   application:
