add retry config

--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 app:
   telegram-token: ${bot_token}
   scrapper-base-uri: http://localhost:8080
+  retry:
+    back-off-policy: constant
+    httpStatuses: INTERNAL_SERVER_ERROR, UNAUTHORIZED
+    max-attempts: 3
+    delay: 1000
 
 spring:
   application:
