change key rate limit

--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -23,7 +23,7 @@ bucket4j:
 
   default-metric-tags:
     - key: IP
-      expression: getRemoteAddr()
+      expression: getHeader("X-Forwarded-For")
       types: REJECTED_COUNTER
 
   filter-config-caching-enabled: true
@@ -46,7 +46,7 @@ bucket4j:
       url: /updates
       strategy: first
       rate-limits:
-        - cache-key: getRemoteAddr()
+        - cache-key: getHeader("X-Forwarded-For")
           num-tokens: 1
           bandwidths:
             - id: bandwidthsChat
