--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,9 +112,7 @@ services:
       kafka-topics --bootstrap-server kafka1:9091,kafka2:9092,kafka3:9093 --list
 
       echo -e 'Creating kafka topics'
-      kafka-topics --bootstrap-server kafka1:9091,kafka2:9092,kafka3:9093 --create --if-not-exists --topic scrapper.api.api_error --replication-factor 3 --partitions 3
-      kafka-topics --bootstrap-server kafka1:9091,kafka2:9092,kafka3:9093 --create --if-not-exists --topic scrapper.api.link_response --replication-factor 3 --partitions 3
-      kafka-topics --bootstrap-server kafka1:9091,kafka2:9092,kafka3:9093 --create --if-not-exists --topic scrapper.api.list_link_response --replication-factor 3 --partitions 3
+      kafka-topics --bootstrap-server kafka1:9091,kafka2:9092,kafka3:9093 --create --if-not-exists --topic scrapper.link_update --replication-factor 3 --partitions 3
 
       echo -e 'Successfully created the following topics:'
       kafka-topics --bootstrap-server kafka1:9091,kafka2:9092,kafka3:9093 --list
