--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -15,6 +15,11 @@ app:
 
   kafka:
     bootstrapServers: localhost:29091, localhost:29092, localhost:29093
+    update-topic-name: scrapper.link_update
+    topics-property:
+      - topicName: scrapper.link_update
+        number-partitions: 3
+        replication-factor: 3
 
 spring:
   application:
