--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -27,6 +27,10 @@ jobs:
       - name: maven build
         run: mvn -pl scrapper -am package
 
+      - name: build scrapper image
+        run: docker build -t scrapper-image -f scrapper.Dockerfile .
+        working-directory: ${{ github.workspace }}/scrapper
+
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
         if: ( github.event_name != 'workflow_dispatch' )
