--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -7,6 +7,10 @@ on:
       - .github/workflows/bot.yml
       - bot/**
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}/bot-image
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,6 +33,16 @@ jobs:
       - name: build bot image
         run: docker build -t bot-image -f bot.Dockerfile .
         working-directory: ${{ github.workspace }}/bot
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: push image
+        run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
