--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -8,6 +8,10 @@ on:
       - link-parser/**
       - scrapper/**
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}/scrapper-image
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,6 +34,16 @@ jobs:
       - name: build scrapper image
         run: docker build -t scrapper-image -f scrapper.Dockerfile .
         working-directory: ${{ github.workspace }}/scrapper
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: push image
+        run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - id: jacoco
         uses: madrapps/jacoco-report@v1.6.1
