--- a/pom.xml
+++ b/pom.xml
@@ -133,13 +133,13 @@
                 <version>${jacoco-maven-plugin.version}</version>
                 <configuration>
                     <excludes>
-                        <exclude>edu.java.schedulers/**</exclude>
-                        <exclude>edu.java.domain/**</exclude>
-                        <exclude>edu.java.exceptions/**</exclude>
-                        <exclude>edu.java.bot.exceptions/**</exclude>
-                        <exclude>edu.java.bot.domain/**</exclude>
-                        <exclude>edu.java.bot.listener/**</exclude>
-                        <exclude>edu.java.bot.sender/**</exclude>
+                        <exclude>edu.java.schedulers</exclude>
+                        <exclude>edu.java.domain</exclude>
+                        <exclude>edu.java.exceptions</exclude>
+                        <exclude>edu.java.bot.exceptions</exclude>
+                        <exclude>edu.java.bot.domain</exclude>
+                        <exclude>edu.java.bot.listener</exclude>
+                        <exclude>edu.java.bot.sender</exclude>
                         <exclude>edu.java.jooq.codegen.JooqCodegen.class</exclude>
                     </excludes>
                 </configuration>
