--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -28,7 +28,7 @@ jobs:
           cache: maven
 
       - name: maven build
-        run: mvn -pl bot -am package
+        run: mvn -pl bot -am package && mvn -pl bot -am install
 
       - name: build bot image
         run: docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} -f bot.Dockerfile .
