--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -29,7 +29,7 @@ jobs:
           cache: maven
 
       - name: maven build
-        run: mvn -pl scrapper -am package
+        run: mvn -pl scrapper -am package && mvm -pl scrapper -am install
 
       - name: build scrapper image
         run: docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} -f scrapper.Dockerfile .
