--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -28,8 +28,11 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: maven build
-        run: mvn -pl scrapper -am package && mvm -pl scrapper -am install
+      - name: maven build-package
+        run: mvn -pl scrapper -am package
+
+      - name: maven build-install
+        run: mvm -pl scrapper -am install
 
       - name: build scrapper image
         run: docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} -f scrapper.Dockerfile .
